--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,28 +16,36 @@
   </head>
 
   <body>
+    <% if current_user%>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><%= current_user.name if current_user %></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">My Cakes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">My ungrouped Cakes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">My Groups</a>
-        </li>
-        
-      </ul>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><%= current_user.name if current_user %></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">My Cakes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My ungrouped Cakes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My Groups</a>
+            </li>
+            
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <% else %>
+    <div class = "ms-auto w-25">
+    <%# <%=link_to "Sign up", new_user_path%>
+    <h5 class= "d-inline " >Already have an acount</h5>
+    <%=link_to "Login", new_session_path%>
     </div>
-  </div>
-</nav>
+<% end %>
     <%= yield %>
   </body>
 </html>
