Update links in navbar

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Groups list</h1>
-    <%= @groups.each do |group|%>
+    <% @groups.each do |group|%>
     <p><%= group.name %></p>
     
 <% end %>
