--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">My Cakes</a>
+              <%=link_to "My cakes", root_path, class: "nav-link active"%>
+              <%# <a class="nav-link active" aria-current="page" href="#">My Cakes</a> %>
             </li>
             <li class="nav-item">
+              <%#link_to "My uncategorized cakes", %>
               <a class="nav-link" href="#">My ungrouped Cakes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">My Groups</a>
+              <%= link_to "Cake categories", groups_path, class: "nav-link"%>
+              <%# <a class="nav-link" href="#">My Groups</a> %>
             </li>
             
           </ul>
