--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Groups list</h1>
     <% @groups.each do |group|%>
-    <p><%= group.name %></p>
     
+    <p><%= link_to group.name, group_path(id: group.id)%></p>
+    <img src="<%=group.icon%>" alt="">
 <% end %>
