--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,8 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @user.name %>
+  <%= @user.name %><br>
+  <img src="<%= @user.avatar%>" alt="">
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
