--- a/app/views/cakes/show.html.erb
+++ b/app/views/cakes/show.html.erb
@@ -3,5 +3,6 @@
 <%=@cake.name%><br>
 <%=@cake.amount%><br>
 <%=@cake.created_at%><br>
+<img src="<%= @group.icon%>" alt="">
 
 <%=link_to "Back" , root_path%>
