Update user show view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %><br>
-  <img src="<%= @user.avatar%>" alt="">
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Logout', logout_path %>
+
+
+<img width="100px" class="rounded-circle img-thumbnail" src="<%= @user.avatar%>" alt="">
+<h3><%= @user.name %></h3>
+
+<ul>
+  <li><i class="fas fa-stroopwafel"></i><%=link_to "My cakes", cakes_path, class: ""%></li>
+  <li><i class="fas fa-outdent"></i> <%#link_to "My uncategorized cakes", %></li>
+  <li><i class="far fa-object-group"></i><%= link_to "Cake categories", groups_path, class: ""%></li>
+  <li><i class="fas fa-user-edit"></i></i><%= link_to 'Edit user', edit_user_path(@user) %></li>
+  <li><i class="fas fa-sign-out-alt"></i><%= link_to 'Logout', logout_path %></li>
+</ul>
