--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Groups list</h1>
     <% @groups.each do |group|%>
-    
-    <p><%= link_to group.name, group_path(id: group.id)%></p>
-    <img src="<%=group.icon%>" alt="">
-<% end %>
+        <p><%= link_to group.name, group_path(id: group.id)%></p>
+        <img src="<%=group.icon%>" alt="">
+    <% end %>
+
+<div class= "d-grid">
+<%= link_to "Create a new Category", new_group_path,  class: "btn btn-success" %>
+</div>
