Removing group input from creating a cake

--- a/app/views/cakes/new.html.erb
+++ b/app/views/cakes/new.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div class="field">
-    <%= form.select(:group_id, options_for_select(@group_options), :include_blank => true) %>
+    <%#= form.select(:group_id, options_for_select(@group_options), :include_blank => true) %>
   </div>
 
   <div class="actions">
