Style signup page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,9 @@ $main-color: #3778c2;
 $second-color: #5fb523;
 $text-color: #434b54;
 
+body {
+    height: 100vh;;
+    background: linear-gradient(#153A67, #4280AD);
+    color: #fff;
+}
+
