--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,7 +31,7 @@
     <%= form.password_field :password_confirmation %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions ">
+    <%= form.submit  "Sign up", class: " btn btn-info" %>
   </div>
 <% end %>
