--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,9 @@
 
 <%= render 'form', user: @user %>
 
+<div class = "ms-auto w-50 ">
+    <h6 class= "d-inline " >Already have an acount?</h6>
+    <p><%=link_to "Login", new_session_path, class: "text-light fw-bold"%></p>
+</div>
+
 
