--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
   </head>
 
   <body>
-    <p id="notice"><%= notice %></p>
-    <%= yield %>
+    <main class= "container-fluid">
+      <p id="notice"><%= notice %></p>
+      <%= yield %>
+    </main>
   </body>
 </html>
