--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,18 @@
-<p id="notice"><%= notice %></p>
 
-<div class="user_view mx-auto text-center">
+<div class="user-img mx-auto text-center">
   <img width="100px" class="rounded-circle img-thumbnail" src="<%= @user.avatar%>" alt="">
   <h3><%= @user.name %></h3>
-
+</div>
+<div class= "user-links">
   <ul>
-    <li><i class="fas fa-stroopwafel"></i><%=link_to "My cakes", cakes_path, class: ""%></li>
-    <li><i class="fas fa-outdent"></i> <%=link_to "My uncategorized cakes", external_path %></li>
-    <li><i class="far fa-object-group"></i><%= link_to "Cake categories", groups_path, class: ""%></li>
-    <li><i class="fas fa-user-edit"></i></i><%= link_to 'Edit user', edit_user_path(@user) %></li>
-    <li><i class="fas fa-sign-out-alt"></i><%= link_to 'Logout', logout_path %></li>
+    <li class= "my-2 fs-6"><i class="fas fa-stroopwafel border p-2 rounded-circle"></i> <%=link_to "My cakes", cakes_path, class: "ms-2 pb-2 "%></li>
+     <hr class= "ms-5">
+    <li class= "my-2 fs-6"><i class="fas fa-outdent border p-2 rounded-circle"></i> <%=link_to "My uncategorized cakes", external_path, class: "ms-2 pb-2 "  %></li>
+    <hr class= "ms-5">
+    <li class= "my-2 fs-6"><i class="far fa-object-group border p-2 rounded-circle"></i> <%= link_to "Cake categories", groups_path, class: "ms-2 pb-2 "%></li>
+    <hr class= "ms-5">
+    <li class= "my-2 fs-6"><i class="fas fa-user-edit border p-2 rounded-circle"></i></i> <%= link_to 'Edit user', edit_user_path(@user), class: "ms-2 pb-2 " %></li>
+    <hr class= "ms-5">
+    <li class= "my-2 fs-6"><i class="fas fa-sign-out-alt border p-2 rounded-circle"></i> <%= link_to 'Logout', logout_path, class: "ms-2 pb-2 " %></li>
   </ul>
 </div>
