--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,10 +18,12 @@
  $main-color: #3778c2;
  $second-color: #5fb523;
  $text-color: #434b54;
- 
+  
  body {
-     height: 100vh;;
-     background: linear-gradient(#153A67, #4280AD);
+     margin:0;
+     padding:0;
+    //  height: 100vh;
+    //  background: darken($main-color, 30%);
      color: #fff;
  }
 
