--- a/app/assets/stylesheets/cakes.scss
+++ b/app/assets/stylesheets/cakes.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the Cakes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+$main-color: #3778c2;
+$second-color: #5fb523;
+$text-color: #434b54;
+$background-color: #e0e1e4;
+
+
+header {
+    background: linear-gradient($main-color, darken($main-color, 10%));
+}
+.all-cakes {
+    background: $background-color;
+    color: $text-color;
+
+    .total,
+    .cake {
+      border-bottom: 2px solid darken($background-color, 10%);
+      
+    }
+    
+    a {
+        color: $text-color;
+    }
+    a:hover {
+        color: $text-color;
+        opacity: 0.5;
+    }
+
+}
+a {
+    color: #fff;
+    text-decoration: none;
+}
+.btn-create {
+    background-color: $second-color;
+}
+
+a:hover {
+    cursor: pointer;
+    color: #fff;
+    opacity: 0.5;
+    text-decoration: none;
+}
