--- a/app/views/cakes/index.html.erb
+++ b/app/views/cakes/index.html.erb
@@ -1,28 +1,41 @@
-<h1>All my Cakes - Total amount= <%= current_user.all_cakes %></h1>
-<%@cakes.each do |cake|%>
-    <p>Name: <%= link_to cake.name, cake_path(id: cake.id) %></p>
-    <p>Amount: <%= cake.amount%> </p>
-    <p>Created at: <%= cake.created_at%></p>
-    <% cake.groups.each do |group|%>
-        <img height="50px" src="<%= group.icon %>" alt=""> 
-        <%= link_to "Remove from this group", remove_group_path(group: group, cake: cake) %>
+<header class="d-flex justify-content-between p-3">
+    
+    <%= link_to user_path(id: current_user.id), class: 'fs-1' do %>
+        <i class="fas fa-bars"></i>
     <% end %>
-   
-    <h6>Add to group</h6>
-        <%= form_with url: add_to_group_path do |form| %>
-            <div class="field">
-                <%= form.select(:group_id, options_for_select(@group_options), :include_blank => true) %>
-            </div>
-             <div class="field">
-            <%= form.hidden_field :id, value: cake.id%>
-            </div>
+    <h1 > MY CAKES </h1>
+    <a  class= "fs-1"><i class="fas fa-search"></i></a>
+</header>
 
-            <div class="actions">
-                <%= form.submit %>
+<section class="all-cakes">
+    <div class=" p-3 total d-flex justify-content-between bg-light align-items-center mb-2">
+        <h3>Total amount</h3>
+        <p class= "m-0 p-1 fs-4 fw-bold"><%= current_user.all_cakes %></p>
+    </div>
+
+    <div class= "cakes">
+        <%@cakes.each do |cake|%>
+            <div class="cake bg-light m-2 d-flex">
+                
+                <div class="group-icon p-2">
+                    <img class= "rounded" height="100px" width="100px" src="<%= cake.groups.first.icon if cake.groups.first%>" alt="Uncategorized item">  
+                </div>
+                <div class="info w-100 p-3 d-flex flex-column justify-content-between">
+                    <div class="base d-flex justify-content-between" >
+                    <p><%= link_to cake.name, cake_path(id: cake.id), class: "fs-4"%></p>
+                    <p class= "fs-4 fw-bold "><%= cake.amount%> </p>
+                    </div>
+                    <div class="date pt-1 border-top border-light-grey"">
+                        <p class="m-0">Created at: <%= cake.created_at%></p>
+                    </div>
+                </div>
             </div>
+            
         <% end %>
-    <hr>
-<% end %>
-<div class= "d-grid">
-<%= link_to "Create a new Cake", new_cake_path,  class: "btn btn-success" %>
-</div>
+    </div>
+    <div class= " btn-block btn-create text-center">
+    <%= link_to "Create a new Cake", new_cake_path,  class: "btn btn-create border-light rounded m-2 btn-block text-light" %>
+    </div>
+
+</section>
+
