--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,13 +1,38 @@
-<h2><%=@group.name%> details - Total amount = <%=@group.all_cakes %></h2>
 
-<br>
-<img src="<%=@group.icon%>" alt=""><br>
-<p>Group is created: <%=@group.created_at%></p><br>
-<hr>
-<%@group.cakes.uniq.each do |cake|%>
-<p>Cake name: <%= cake.name%></p>
-<p>Author name: <%= cake.author.name%></p>
-<hr>
-<% end %>
+<header class="d-flex justify-content-between p-3">
+    
+    <%= link_to user_path(id: current_user.id), class: 'fs-1' do %>
+        <i class="fas fa-bars"></i>
+    <% end %>
+    <h1 > <%=@group.name%> </h1>
+    <a  class= "fs-1"><i class="fas fa-search"></i></a>
+</header>
 
-<%=link_to "Back" , groups_path%>
+<section class="all-groups">
+    
+    <div class= "cakes">
+        <%@cakes.each do |cake|%>
+            <div class="cake bg-light m-2 d-flex">
+                
+                <div class="group-icon p-2">
+                    <img class= "rounded" height="100px" width="100px" src="<%= cake.groups.first.icon if cake.groups.first%>" alt="Uncategorized item">  
+                </div>
+                <div class="info w-100 p-3 d-flex flex-column justify-content-between">
+                    <div class="base d-flex justify-content-between" >
+                    <p><%= link_to cake.name, cake_path(id: cake.id), class: "fs-4"%></p>
+                    <p class= "fs-4 fw-bold "><%= cake.amount%> </p>
+                    </div>
+                    <div class="author">
+                        <p>Author: <%= cake.author.name %></p>
+                    </div>
+                    <div class="date pt-1 border-top border-light-grey"">
+                        <p class="m-0">Created at: <%= cake.created_at%></p>
+                    </div>
+                </div>
+            </div>
+        <% end %>
+    </div>
+    <div class= " btn-block btn-create text-center">
+    <%= link_to "Create a new Category", new_group_path,  class: "btn btn-create border-light rounded m-2 btn-block text-light" %>
+    </div>
+</section>
