--- a/app/views/cakes/show.html.erb
+++ b/app/views/cakes/show.html.erb
@@ -6,3 +6,54 @@
 <img src="<%= @group.icon if @group%>" alt=""> 
 
 <%=link_to "Back" , root_path%>
+<header class="d-flex justify-content-between p-3">
+    
+    <%= link_to user_path(id: current_user.id), class: 'fs-1' do %>
+        <i class="fas fa-bars"></i>
+    <% end %>
+    <h1 > <%=@cake.name%> </h1>
+    <a  class= "fs-1"><i class="fas fa-search"></i></a>
+</header>
+
+<section class="all-cakes p-5">
+    <h2>Cake details</h2>
+    <hr>
+    <h6><strong>Name:</strong>  <%=@cake.name%></h6><br>
+    <h6><strong>Amount:</strong> <%=@cake.amount%></h6><br>
+    <h6><strong>Created at:</strong> <%=@cake.created_at%></h6><br>
+    <div class="categories d-flex flex-wrap justify-content-start">
+        <h6><strong>Category: </strong></h6>
+        <div class="group-thumbnails d-flex flex-wrap">
+            <% @groups.each do |group|%>
+            <div class= "mx-3">
+                <p class= "m-0"><%= group.name %> </p>
+                <img  height="50px" src="<%= group.icon %>" alt="Category">
+                <%= link_to remove_group_path(group:group, cake:@cake), class: "d-block" do%>
+                    <i class="far fa-times-circle text-danger " alt="Remove category"><span class="text-danger ">Remove </span></i>
+                <% end %>
+            </div>
+        <% end %>
+        </div>
+        
+    </div>
+
+
+
+    <h6>Add category</h6>
+        <%= form_with url: add_to_group_path do |form| %>
+            <div class="field">
+                <%= form.select(:group_id, options_for_select(@group_options), :include_blank => true) %>
+            </div>
+            <div class="field">
+                <%= form.hidden_field :id, value: @cake.id%>
+            </div>
+
+            <div class="actions">
+                <%= form.submit "Save category", class: "btn btn-info"%>
+            </div>
+        <% end %>
+    
+    <div class= " btn-block btn-danger text-center">
+    <%= link_to "Destroy item", cake_path, method: :delete, data:{confirm: "Are you sure you want to remove the item?"}, class: "btn btn-danger border-light rounded m-2 btn-block text-light" %>
+    </div>
+</section>
