Style edit page

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,6 +32,6 @@
   </div>
 
   <div class="actions ">
-    <%= form.submit  "Sign up", class: " btn btn-info" %>
+    <%= form.submit  "Confirm", class: " btn btn-info" %>
   </div>
 <% end %>
