--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -5,7 +5,9 @@
         <i class="fas fa-bars"></i>
     <% end %>
     <h1 > <%=@group.name%> </h1>
-    <a  class= "fs-1"><i class="fas fa-search"></i></a>
+    <%= link_to groups_path, class: 'fs-1' do %>
+        <i class="fas fa-arrow-left"></i>
+    <% end %>
 </header>
 
 <section class="all-groups">
