--- a/app/views/cakes/index.html.erb
+++ b/app/views/cakes/index.html.erb
@@ -1,10 +1,22 @@
-<header class="d-flex justify-content-between p-3">
-    
-    <%= link_to user_path(id: current_user.id), class: 'fs-1' do %>
+<header class="">
+    <div class="links d-flex justify-content-between p-3">
+        <%= link_to user_path(id: current_user.id), class: 'fs-1' do %>
         <i class="fas fa-bars"></i>
     <% end %>
     <h1 > MY CAKES </h1>
     <a  class= "fs-1"><i class="fas fa-search"></i></a>
+    </div>
+    <ul class="order d-flex justify-content-end me-3 pb-2 ">
+        <li>
+        <%= link_to "Most recent", cakes_path(order:"desc"), class: "mx-3 d-block" %>
+        <%= desc_dot%>
+        </li>
+        <li>
+        <%= link_to "Most ancient", cakes_path(order:"asc"), class: "mx-3 d-block" %>
+        <%=asc_dot %>
+        </li>
+    </ul>
+    
 </header>
 
 <section class="all-cakes">
@@ -12,26 +24,8 @@
         <h3>Total amount</h3>
         <p class= "m-0 p-1 fs-4 fw-bold"><%= current_user.all_cakes %></p>
     </div>
-
     <div class= "cakes">
-        <%@cakes.each do |cake|%>
-            <div class="cake bg-light m-2 d-flex">
-                
-                <div class="group-icon p-2">
-                    <img class= "rounded" height="100px" width="100px" src="<%= cake.groups.first.icon if cake.groups.first%>" alt="Uncategorized item">  
-                </div>
-                <div class="info w-100 p-3 d-flex flex-column justify-content-between">
-                    <div class="base d-flex justify-content-between" >
-                    <p><%= link_to cake.name, cake_path(id: cake.id), class: "fs-4"%></p>
-                    <p class= "fs-4 fw-bold "><%= cake.amount%> </p>
-                    </div>
-                    <div class="date pt-1 border-top border-light-grey"">
-                        <p class="m-0">Created at: <%= cake.created_at%></p>
-                    </div>
-                </div>
-            </div>
-            
-        <% end %>
+        <%= render "display_cakes", cakes: @cakes%>
     </div>
     <div class= " btn-block btn-create text-center">
     <%= link_to "Create a new Cake", new_cake_path,  class: "btn btn-create border-light rounded m-2 btn-block text-light" %>
