--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,7 +11,10 @@
 </header>
 
 <section class="all-groups">
-    
+    <div class=" p-3 total d-flex justify-content-between bg-light align-items-center mb-2">
+        <h3>Total amount</h3>
+        <p class= "m-0 p-1 fs-4 fw-bold"><%= @group.all_cakes %></p>
+    </div>
     <div class= "cakes">
         <%@cakes.each do |cake|%>
             <div class="cake bg-light m-2 d-flex">
