Add margin bottom to user-img div

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <section class="user p-5">
-  <div class="user-img mx-auto text-center">
+  <div class="user-img mx-auto text-center mb-5">
     <img width="100px" class="rounded-circle img-thumbnail" src="<%= @user.avatar%>" alt="">
     <h3 class="text-light"><%= @user.name %></h3>
-    </div>
-  <div class= "user-links">
+  </div>
+  <div class= "user-links ">
     <ul>
       <li class= "my-2 fs-6"><i class="fas fa-stroopwafel border p-2 rounded-circle"></i> <%=link_to "My cakes", cakes_path, class: "ms-2 pb-2 "%></li>
       <hr class= "ms-5 bg-light">
