--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -24,7 +24,7 @@
                 </div>
                 <div class="info w-100 p-3 d-flex flex-column justify-content-between">
                     <div class="base d-flex justify-content-between" >
-                    <p><%= link_to cake.name, cake_path(id: cake.id), class: "fs-4"%></p>
+                    <p class="fs-4"><%= cake.name %></p>
                     <p class= "fs-4 fw-bold "><%= cake.amount%> </p>
                     </div>
                     <div class="author">
