--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
   </head>
 
   <body>
+      <%if notice%>
       <p id="notice"><%= notice %></p>
+      <% end %>
       <%= yield %>
    
   </body>
