--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -22,7 +22,7 @@
                         <p><%= link_to group.name, group_path(id: group.id), class: "fs-4"%></p>
                     </div>
                     <div class="date pt-1 border-top border-light-grey"">
-                        <p class="m-0">Created at: <%= group.created_at%></p>
+                        <p class="m-0">Created at: <%= group.created_at.strftime("%I:%M%p on %d/%m/%Y")%></p>
                     </div>
                 </div>
             </div>
