--- a/app/views/cakes/external.html.erb
+++ b/app/views/cakes/external.html.erb
@@ -11,7 +11,7 @@
 <section class="all-cakes">
     <div class=" p-3 total d-flex justify-content-between bg-light align-items-center mb-2">
         <h3>Total amount</h3>
-        <p class= "m-0 p-1 fs-4 fw-bold"><%= current_user.count_uncategorized_cakes%></p>
+        <p class= "m-0 p-1 fs-4 fw-bold"><%= @count_uncategorized_cakes%></p>
     </div>
 
     <div class= "cakes">
