Style new category submit button

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -23,6 +23,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Create Group", class: "btn btn-create text-light" %>
   </div>
 <% end %>
