--- a/app/views/cakes/_display_cakes.html.erb
+++ b/app/views/cakes/_display_cakes.html.erb
@@ -2,7 +2,7 @@
  <% cakes.each do |cake|%>
     <div class="cake bg-light m-2 d-flex">
         <div class="group-icon p-2">
-            <img class= "rounded" height="100px" width="100px" src="<%= cake.groups.first.icon if cake.groups.first%>" alt="Uncategorized item">  
+            <img class= "rounded" height="100px" width="100px" src="<%= category_img(cake)%>" alt="Uncategorized item">  
         </div>
         <div class="info w-100 p-3 d-flex flex-column justify-content-between">
             <div class="base d-flex justify-content-between" >
