--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,6 +13,8 @@
       <hr class= "ms-5 bg-light">
       <li class= "my-2 fs-6"><i class="fas fa-user-edit border p-2 rounded-circle"></i></i> <%= link_to 'Edit user', edit_user_path(@user), class: "ms-2 pb-2 " %></li>
       <hr class= "ms-5 bg-light">
+      <li class= "my-2 fs-6"><i class="fas fa-users border p-2 rounded-circle"></i></i> <%= link_to 'See all users', users_path, class: "ms-2 pb-2 " %></li>
+      <hr class= "ms-5 bg-light">
       <li class= "my-2 fs-6"><i class="fas fa-sign-out-alt border p-2 rounded-circle"></i> <%= link_to 'Logout', logout_path, class: "ms-2 pb-2 " %></li>
     </ul>
   </div>
