--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>GroupOurCakes</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="og:title" content= "Group our cakes app">
+    <meta name="og:description" content="Application for grouping Cakes in different Categories">
     <meta property="og:image" content="screen_shoots/Preview.png">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
