--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta name="og:title" content= "Group our cakes app">
     <meta name="og:description" content="Application for grouping Cakes in different Categories">
     <meta property="og:image" content="screen_shoots/Preview.png">
+    <link rel='icon' href="screen_shoots/Preview.png">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel="preconnect" href="https://fonts.googleapis.com">
